objects/Deluxe_Creds__mdt.object
<CustomObject>
    <description>It contains Wintrust Configurations</description>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <description>Endpoint Url</description>
        <label>Endpoint URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FI_ID__c</fullName>
        <description>FI ID</description>
        <label>FI ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FI_TOKEN__c</fullName>
        <description>FI Token</description>
        <label>FI TOKEN</label>
        <type>TextArea</type>
    </fields>
    <label>Deluxe_Creds</label>
    <pluralLabel>Deluxe_Creds</pluralLabel>
</CustomObject>